# birl_baxter_tools

gazebo/: install_gazebo_models.sh
python/: CreatingPythonNodes.txt~  Debugging Baxter with Spyder.txt  Python Resources.txt
rviz/hku_rviz_plugins/: stack.xml
rviz/hku_rviz_plugins/copm_plugin/: CMakeLists.txt  README.md  manifest.xml  plugin_description.xml
rviz/hku_rviz_plugins/copm_plugin/demo/: copm_demo.py
rviz/hku_rviz_plugins/copm_plugin/launch/: copm_plugin_demo.launch
rviz/hku_rviz_plugins/copm_plugin/rviz/: copm_plugin_demo.rviz
rviz/hku_rviz_plugins/copm_plugin/src/: copm_display.cpp  copm_display.h  copm_visual.cpp  copm_visual.h
rviz/point_cloud_selector/: CMakeLists.txt  README.md  package.xml
rviz/point_cloud_selector/launch/: cylinder_selector.launch  cylinder_selector_demo.launch  cylinder_selector_peter.launch  cylinder_selector_w_fake_server.launch
rviz/point_cloud_selector/msg/: CylinderProperties.msg
rviz/point_cloud_selector/rviz/: cylinder_selector.vcg
rviz/point_cloud_selector/scripts/: cylinder_selector_ui.py
rviz/point_cloud_selector/src/: cylinder_selector.cpp
rviz/point_cloud_selector/srv/: SelectCylinder.srv  SetCylinderProperties.srv
scripts/: callMatlabTerminal
scripts/baxter_gripper_customization/: changing_endEff_weight
scripts/manual_publication_scripts/: JointCommand.txt  JointCommand.txt~  actionlib_cancel  catkin_flags.txt  catkin_flags.txt~  collisionSuppression  force_controller_serviceCall.txt  gravitySuppression.txt
scripts/rosdep/: rosdep.txt
scripts/ssh/: scp_to_baxter  ssh_to_baxter
(+2 files in other folders)
